testsuite/tests/parsing/pr6604.compilers.reference
File "pr6604.ml", line 9, characters 0-1:
9 | #1
    ^
Error: Syntax error
